2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/taskmgr/.cvsignore: Add *.gch.
	* subsys/system/taskmgr/precomp.h: New file.
	* subsys/system/taskmgr/makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/taskmgr/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/usetup/.cvsignore: Add *.gch.
	* subsys/system/usetup/precomp.h: New file.
	* subsys/system/usetup/makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/usetup/*.c: Use pre-compiled header.

2004-08-16  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* subsys/system/cmd/.cvsignore: Add *.gch.
	* subsys/system/cmd/precomp.h: New file.
	* subsys/system/cmd/Makefile (TARGET_PCH): Set to precomp.h.
	* subsys/system/cmd/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/user32/include/.cvsignore: New file.
	* lib/user32/Makefile (TARGET_PCH): Set to include/user32.h.
	* lib/user32/*/*.c: Use pre-compiled header.
	* include/wine/debug.h (FIXME): Override previous declaration is needed.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/userenv/.cvsignore: Add *.gch.
	* lib/userenv/makefile (TARGET_PCH): Set to precomp.h.
	* lib/userenv/*.c: Use pre-compiled header.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/ws2_32/include/.cvsignore: New file.
	* lib/ws2_32/makefile (TARGET_PCH): Set to include/ws2_32.h.
	* lib/ws2_32/include/[catalog.h, handle.h]: Don't include ws2_32.h.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdi32/include/.cvsignore: New file.
	* lib/gdi32/.cvsignore: Remove *.gch.

2004-08-15  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* lib/gdi32/.cvsignore: Ignore *.gch.
	* lib/gdi32/include/precomp.h: New file.
	* lib/gdi32/Makefile (TARGET_PCH): Set to include/precomp.h.
	* lib/gdi32/*/*.c: Use pre-compiled header.
